--- a/Issue-Tracking-System/bower.json
+++ b/Issue-Tracking-System/bower.json
@@ -18,6 +18,7 @@
     "jquery-ui": "jqueryui#^1.11.4",
     "angular-ui": "^0.4.0",
     "angular-filter": "^0.5.8",
-    "angular-ui-bootstrap": "^1.3.2"
+    "angular-ui-bootstrap": "^1.3.2",
+    "angular-loading-bar": "^0.9.0"
   }
 }
